MEditor/MEditor.css
/* ... */
.meditor-button:hover {
    background-color: var(--me-color-bg-active);
}


.meditor-sash-v {
    position: absolute;
    height: 100%;
    cursor: ew-resize;
    background-color: transparent;
    border: none;
    z-index: 100;
}
.meditor-sash-v:hover {
    background-color: var(--me-color-sash);
}

.meditor-sash-h {
    position: absolute;
    width: 100%;
    cursor: ns-resize;
    background-color: transparent;
    border: none;
    z-index: 100;
}
.meditor-sash-h:hover {
    background-color: var(--me-color-sash);
}


.meditor-header {
    align-items: center;
    display: flex;
    height: 4em;
    /*border-bottom: 1px solid var(--me-color-border);*/
}

.meditor-header-container {
    display: flex;
    width: 100%;
    height: 100%;
}

.meditor-header-title {
    margin: 0;
    text-align: center;
    line-height: 2em;
    padding-left: .5em;
}

.meditor-header-menu {
    margin-left: auto;
    display: flex;
    padding-right: .5em;
    align-items: center;
}

.meditor-header-menu button {
    height: fit-content;
    border: none;
}


.meditor-main {
    position: relative;
    width: 100%;
    height: calc(100% - 4em);
}


.meditor-split {
    display: flex;
    white-space: nowrap;
}

.meditor-split-v {
    flex-direction: row;
    max-width: 100%;
}

.meditor-split-h {
    flex-direction: column;
    max-height: 100%;
}


.meditor-left {
    position: absolute;
    left: 0;
    width: calc(20%);
    height: 100%;
    /*border-right: 1px solid var(--me-color-border);*/
}

.meditor-mid {
    position: absolute;
    left: calc(20%);
    width: 60%;
    height: 100%;
}


.meditor-right {
    position: absolute;
    right: 0;
    width: calc(20%);
    height: 100%;
    border-left: 1px solid var(--me-color-border);
}

.meditor-mid-container {
    position: relative;
    width: 100%;
    height: 100%;
}

.meditor-mid-main {
    position: absolute;
    top: 0;
    width: 100%;
    height: 80%;
}

.meditor-mid-bottom {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 20%;
    border-top: 1px solid var(--me-color-border);
}



.meditor-explorer {
    width: 100%;
    max-width: 100%;
    display: flex;
    flex-direction: column;
}

.meditor-explorer-title {
    margin: 0;
    padding: 0;
    padding-left: .3em;
    overflow: hidden;
    min-height: 1.3em;
}

.meditor-explorer-menu {
    display: flex;
    overflow: hidden;
    padding-bottom: .4em;
    min-height: 1.3em;
}

.meditor-explorer-menu-text {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-left: .3em;
}

.meditor-explorer-menu-control {
    margin-left: auto;
}


.meditor-explorer-content {
    overflow-y: auto;
    padding-bottom: 1.2em;
}

.meditor-file {
    display: flex;
    cursor: pointer;
    padding-left: .5em;
    width: 100%;
    color: var(--me-color-text);
}
.meditor-file:hover {
    background-color: var(--me-color-bg-active);
}
.meditor-file-selected {
    background-color: var(--me-color-bg-active);
}

.meditor-file-name {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.meditor-file-selected {
    background-color: var(--me-color-bg-active);
}

.meditor-file-control {
    display: flex;
    margin-left: auto;
    left: 0;
}

.meditor-file-menu {
    cursor: pointer;
    border: none;
    background: transparent;
    height: 100%;
}

.meditor-file-menu:hover {
    background-color: var(--me-color-bg-active-active);
}


.meditor-dir {
    width: 100%;
    color: var(--me-color-text);
    display: flex;
    flex-direction: column;
}



.meditor-dir-menu {
    width: 100%;
    cursor: pointer;
}
.meditor-dir-menu:hover {
    background-color: var(--me-color-bg-active);
}

.meditor-dir-name {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-left: .5em;
    color: var(--me-color-text);
    text-align: left;
}

.meditor-dir-name::before {
    font-size: 1em;
    content: "▶";
    margin-right: .4em;
}

.meditor-dir-name-expanded::before {
    content: "▼";
}

.meditor-dir-content {
    padding-left: 1.2em;
    display: none;
}
.meditor-dir-content-show {
    display: block;
}



.meditor-editor {
    display: flex;
    height: 100%;
    width: 100%;
    flex-direction: column;
}

.meditor-editor-menu {
    display: flex;
    width: 100%;
}

.meditor-editor-menu-left {
    display: flex;
}
.meditor-editor-menu-left *{
    padding: .5em;
    margin: .2em 0 .2em .2em;
}

.meditor-editor-menu-right {
    margin-left: auto;
}
.meditor-editor-menu-right *{
    padding: .5em;
    margin: .2em .2em .2em 0;
}


.meditor-editor-content {
    width: 100%;
    height: 100%;
    background-color: var(--me-color-editor-bg)
}





#user-menu {
    margin-left: auto;
    padding: .5em;
}

.window {
    overflow: hidden;
    background-color: var(--color-bg-alt);
    color: var(--color-text-alt);
    /*border: solid 1px #666;*/
}


.window-title {
    font-size: 1em;
    margin: .1em;
    white-space: nowrap;
    overflow: hidden;
}

#left-side-bar {
    padding: 0;
    margin: 0;
    width: max(18em, 20%);
    resize: horizontal;
    display: flex;
    flex-direction: column;
}

#explorer {
    display: flex;
    flex-direction: column;
    height: 100%
}

#explorer-menu {
    padding: 0;
    margin: 0;
    display: flex;
}

#explorer-title {
    padding-left: .3em;
    margin: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#explorer-controls {
    padding: 0;
    padding-right: .3em;
    margin: 0;
    display: flex;
    margin-left: auto;
}

.explorer-control-item {
    cursor: pointer;
    margin: 0;
    padding: 0;
    white-space: nowrap;
}

.explorer-control-item, .explorer-control-item button {
    background-color: var(--color-bg-alt);
    color: var(--color-text-alt);
    border: solid 1px #666;

    padding: .1em;
    margin: 0;
    margin-right: .2em;
    cursor: pointer;
    border-radius: .3em;
}
/* ... */

